--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,13 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
