add a clock to the widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="actionUpdate"/>
+                <action android:name="actionTimeWidget"/>
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
