--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,6 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.0.0"
-    def room_version = "2.1.0-rc01"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
@@ -38,16 +36,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     // Room
-    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-runtime:2.1.0"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.firebase:firebase-firestore:19.0.2'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation 'com.google.firebase:firebase-firestore:20.1.0'
+    annotationProcessor "androidx.room:room-compiler:2.1.0"
 
-    implementation 'com.google.firebase:firebase-core:16.0.9'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-// Add dependency
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     testImplementation 'junit:junit:4.12'
