--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-
+    implementation 'com.github.mancj:SlideUp-Android:2.2.8'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.github.mumayank:AirLocation:1.2'
 
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
