--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.firebase:firebase-firestore:20.1.0'
     annotationProcessor "androidx.room:room-compiler:2.1.0"
+    implementation 'androidx.work:work-runtime:2.1.0'
 
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
