--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-
+                <action android:name="Rainbow.update.unit"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
