--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.mancj:SlideUp-Android:2.2.8'
+    implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.github.vihtarb:tooltip:0.2.0'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.github.mumayank:AirLocation:1.2'
