--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:runtime:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
     // Room
     implementation "androidx.room:room-runtime:2.1.0"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-
+    implementation 'com.google.android.gms:play-services-ads:18.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
