--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <dist:module dist:instant="true" />
 
@@ -50,6 +51,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
+        <receiver
+            android:name=".Utilities.DailyNotificationAlarmReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="rainbow.notification.notify" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
