--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <dist:module dist:instant="true" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/logo_rainbow"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_rainbow"
