--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <activity
             android:name="com.OdiousPanda.rainbow.Activities.WelcomeActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="locale|orientation"
             android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -48,7 +48,7 @@
         </activity>
         <activity
             android:name="com.OdiousPanda.rainbow.Activities.MainActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="locale|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
